[gd_scene load_steps=5 format=3 uid="uid://behv2crw8tsbj"]

[ext_resource type="Script" path="res://scenes/1_Duel/duel.gd" id="1_4e3ey"]
[ext_resource type="Texture2D" uid="uid://qsyqjjepelie" path="res://assets/1/1_fondo.png" id="2_pf4hg"]
[ext_resource type="Texture2D" uid="uid://ccbyfcjy8y8x0" path="res://assets/1/1_2.png" id="3_5wpc7"]
[ext_resource type="Texture2D" uid="uid://blj4eb53rowsl" path="res://assets/1/1_1.png" id="4_47ja2"]

[node name="Duel" type="Node2D"]
script = ExtResource("1_4e3ey")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="HWBegin" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HWEnd" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_pf4hg")

[node name="Usurper" type="Sprite2D" parent="."]
position = Vector2(-369.492, 1.63863)
scale = Vector2(-0.588815, 0.588815)
texture = ExtResource("3_5wpc7")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Usurper"]

[node name="Samurai" type="Sprite2D" parent="."]
position = Vector2(390, 25)
scale = Vector2(-0.560776, 0.560776)
texture = ExtResource("4_47ja2")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Samurai"]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="HWBegin" to="." method="_on_hw_begin_timeout"]
[connection signal="timeout" from="HWEnd" to="." method="_on_hw_end_timeout"]
